# EchoIR

./: .gitignore  CMakeLists.txt
cmake/: EmbedWebAssets.cmake
data/: ac_brands.json
include/echoir/: ac.hpp  ac_official.hpp  code_store.hpp  device.hpp  frame.hpp  serial.hpp  web_server.hpp
src/: ac.cpp  ac_official.cpp  cli.cpp  code_store.cpp  device.cpp  frame.cpp  serial.cpp  web_server.cpp
tests/: test_echoir.cpp
web/: index.html  package-lock.json  package.json  vite.config.js
web/server/: index.js
web/src/: main.jsx  styles.css
